<resources>
    <string name="app_name">Car Service</string>
    <string name="slogan" translatable="false">When you have any problems with the car, we will help you</string>
    <string name="title_activity_home" translatable="false">Home</string>
    <string name="next" translatable="false"><u>sign up later</u></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="API_KEY">AIzaSyBz6QP1SJk37CLobZ-GEsF895lJfwka1JY</string>
    <string name="agent" translatable="false">Agent address</string>
    <string name="hotline" translatable="false">Hot Line</string>
    <string name="maintenance" translatable="false">Maintenance car</string>
    <string name="more" translatable="false">Information more</string>
    <string name="checkE" translatable="false">Check the Eviction</string>
    <string name="helpPhone" translatable="false">Help phone</string>
    <string name="chatUs" translatable="false">Chat with Us</string>
    <string name="oto" translatable="false">Car Information</string>
    <string name="category" translatable="false">Category car</string>
    <string name="vin" translatable="false">Vin Code</string>
    <string name="fill" translatable="false">Fill by hand or Scan</string>
    <string name="signup" translatable="false">SignUp</string>
    <string name="signin" translatable="false">Sign In</string>
    <string name="calendar" translatable="false">Set Calendar</string>
    <string name="note" translatable="false">Note</string>
    <string name="save" translatable="false">Save</string>
    <string name="listCar" translatable="false">List Car</string>
    <string name="personal" translatable="false">Personal</string>
    <string name="add" translatable="false">Add</string>
    <string name="name" translatable="false">Name</string>
    <string name="passWord" translatable="false">Password</string>
    <string name="phoneNumber" translatable="false">Phone Number</string>
    <string name="firstName" translatable="false">First Name</string>
    <string name="lastName" translatable="false">Last Name</string>
    <string name="writemessage" translatable="false">Write a message ...</string>
    <string name="insertcar" translatable="false">Insert Vin Code</string>
    <string name="information" translatable="false">Information</string>
    <string name="notify" translatable="false">Notification</string>
    <string name="logout" translatable="false">Log out</string>
    <string name="send" translatable="false">Send</string>
    <string name="center" translatable="false">accessories</string>
    <string name="lbl_forgot_password" translatable="false">Forgot password?</string>
    <string name="forgot_password_msg" translatable="false">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id" translatable="false">Email ID</string>
    <string name="btn_reset_password" translatable="false">Reset Password</string>
    <string name="btn_back" translatable="false"><![CDATA[<< Back]]></string>
    <string name="hint_email">Email</string>
    <string name="btn_forgot_password" translatable="false">Forgot your password?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="CarDetails" translatable="false">Car Details</string>
    <string name="ChooseDateTime" translatable="false">Choose date and time</string>
    <string name="vehiclerecall" translatable="false">vehicle recall</string>
    <string name="OKMainReCall" translatable="false">Your car in the vehicle recall list</string>
    <string name="NoMainRecall" translatable="false">Your car is not on the recall list</string>

</resources>
