<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@android:id/tabhost"
    tools:context="com.khachungbg97gmail.carservice.PersonalInformation">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TabWidget android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <FrameLayout android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:id="@+id/listCar"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="460dp"
                />
                <info.hoang8f.widget.FButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnAdd"
                    android:text="@string/add"
                    android:textSize="20dp"
                    android:layout_alignParentBottom="true"
                    android:textColor="@android:color/white"
                    android:layout_margin="8dp"/>
            </LinearLayout>
            <RelativeLayout android:id="@+id/personal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                android:shrinkColumns="1"
                android:paddingTop="4dip"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp">
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/Name"
                        android:hint="@string/name"
                        android:textColorHint="@android:color/white"
                        android:inputType="text"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:layout_marginTop="2dp"
                        app:met_maxCharacters="11"/>
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/Password"
                        android:hint="@string/passWord"
                        android:textColorHint="@android:color/white"
                        android:inputType="textPassword"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:layout_marginTop="2dp"
                        app:met_maxCharacters="11"/>
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/Phone"
                        android:hint="@string/phoneNumber"
                        android:textColorHint="@android:color/white"
                        android:inputType="phone"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:layout_marginTop="2dp"
                        app:met_maxCharacters="11"/>
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/Email"
                        android:hint="Email"
                        android:textColorHint="@android:color/white"
                        android:inputType="textWebEmailAddress"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:layout_marginTop="2dp"
                        app:met_maxCharacters="30"/>
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/FirstName"
                        android:hint="@string/firstName"
                        android:textColorHint="@android:color/white"
                        android:inputType="text"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:layout_marginTop="2dp"
                        app:met_maxCharacters="11"/>
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/LastName"
                        android:hint="@string/lastName"
                        android:textColorHint="@android:color/white"
                        android:inputType="text"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:layout_marginTop="2dp"
                        app:met_maxCharacters="11"/>
                </LinearLayout>
                <info.hoang8f.widget.FButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSave"
                    android:layout_weight="1"
                    android:text="@string/save"
                    android:layout_alignParentBottom="true"
                    app:buttonColor="@color/btnSignUp"
                    android:textColor="@android:color/white"
                    android:layout_margin="8dp"/>
            </RelativeLayout>
        </FrameLayout>
    </LinearLayout>

</TabHost>
